[tool.poetry]
name = "OLBtools"
version = "0.1.0"
description = "An optical link budget tool, with support for scintillation, APDs, and 4 quadrant detectors"
authors = ["Paul Serra <pserra@mit.edu>"]
readme = "README.md"
packages = [{include = "OLBtools"}]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
matplotlib = "^3.9.3"
gitpython = "^3.1.43"
numpy = "^2.2.0"
scipy = "^1.14.1"
lowtran = "^3.1.0"
mpmath = "^1.3.0"
pdfkit = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
